@@ -1,3 +1,8 @@
+2015-02-25  Corinna Vinschen  <corinna@vinschen.de>
+
+	* ntsec.xml (ntsec-mapping): Match the description of the default
+	values for db_home, db_shell, and db_gecos to the latest changes.
+
 2015-02-24  Warren Young  <warren@etr-usa.com>
 
 	* faq-using.xml (faq.using.ssh-pubkey-stops-working): Added the
